# rust-study

./: .gitignore  README.md
archive/actix-gcd/: Cargo.toml
archive/actix-gcd/src/: main.rs
archive/mandelbrot/: Cargo.toml
archive/mandelbrot/src/: main.rs
archive/quickreplace/src/: main.rs
backend/: Cargo.toml  docker-compose.yml
backend/src/: error.rs  lib.rs  main.rs  model.rs
backend/src/routes/: always_errors.rs  app_error.rs  create_task.rs  create_user.rs  custom_json_extractor.rs  delete_task.rs  get_json.rs  get_one_task.rs  get_tasks.rs  guard.rs  hello.rs  hello_json.rs  middleware_msg.rs  mod.rs  partial_update_tasks.rs  path_variables.rs  read_middleware_custom_header.rs  returns_201.rs  set_middleware_custom_header.rs  update_tasks.rs  users.rs  validate_data.rs
backend/src/utils/: jwt.rs
backend/src/web/: mod.rs  routes_login.rs
chirpy-os/: Cargo.toml
chirpy-os/src/: main.rs
cosmac/src/: main.rs
cubesat/src/: main.rs
dataORM/: Cargo.toml  docker-compose.yml
dataORM/data/: postmaster.pid
dataORM/data/base/16384/: 2619
dataORM/data/base/4/: 2619
dataORM/data/global/: 1260  1262  2671  2676  pg_control
dataORM/src/: main.rs
genart/: Cargo.toml
genart/src/: main.rs
grep-lite/: Cargo.toml
grep-lite/src/: main.rs
heif-converter/: Cargo.toml
heif-converter/src/: main.rs
kompile/: Cargo.toml  README.md
kompile/src/: main.rs
kompile/src/ast/: lexer.rs
timekeeper/: Cargo.toml
timekeeper/src/: main.rs
todo-base/: Cargo.toml
zero2hero/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
zero2hero/config/: base.yaml
zero2hero/scripts/: init_db.sh
zero2hero/src/: cmd.rs  configuration.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2hero/src/routes/: mod.rs  subscriptions.rs
zero2hero/tests/: health_check.rs
