[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.17", features = ["macros", "headers"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs", "cors"] }

[dev-dependencies]
anyhow = "1.0.70"
httpc-test = "0.1.1"
