[package]
name = "zero2hero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Specify our lib path
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2hero"

[dependencies]
actix-web = "4.3.1"
axum = "0.7.4"
bcrypt = "0.14.0"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = "0.11.24"
serde = { version = "1.0.164", features = ["derive"] }
tower = "0.4.13"
serde_json = "1.0.114"
http-body-util = "0.1.0"
