[package]
name = "zero2hero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2hero"

[dependencies]
actix-web = "4.3.1"
axum = { version = "0.7.4" , features = ["macros"]}
bcrypt = "0.14.0"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = "0.11.24"
serde = { version = "1.0.164", features = ["derive"] }
tower = "0.4.13"
serde_json = "1.0.114"
http-body-util = "0.1.0"
log = "0.4.20"
config = "0.14.0"
anyhow = "1.0.81"
chrono = "0.4.37"
uuid = {  version = "1.8.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
once_cell = "1.19.0"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
clap = { version = "4.5.7", features = ["derive"] }
secrecy = {  version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio-native-tls"]
